--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@stylistic/eslint-plugin": "^1.4.x",
     "@typescript-eslint/eslint-plugin": "6.11.0",
     "@typescript-eslint/parser": "6.11.0",
+    "angular-cli-ghpages": "^0.6.2",
     "eslint": "^8.54.0",
     "husky": "latest",
     "jest": "^29.7.0",
