--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@typescript-eslint/parser": "6.11.0",
     "angular-cli-ghpages": "^0.6.2",
     "eslint": "^8.54.0",
-    "husky": "latest",
+    "husky": "^8.0.3",
     "jest": "^29.7.0",
     "jest-preset-angular": "^13.1.4",
     "lint-staged": "latest",
