--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -8,6 +8,9 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  schedule:
+    # Does it every monday at 13:00 UTC before Lighthouse reports disapears
+    - cron: "0 13 * * 1"
 
 permissions:
   contents: read
