--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -84,6 +84,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Audit URLs using Lighthouse
         uses: treosh/lighthouse-ci-action@v10
+        env:
+          LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
         with:
           urls: |
             https://ice-blaze.github.io/portfolio2/
