Add lighthouse ci 2 after application install

--- a/angular.json
+++ b/angular.json
@@ -52,6 +52,9 @@
               ],
               "outputHashing": "all"
             },
+            "lhci": {
+              "outputHashing": "all"
+            },
             "development": {
               "optimization": false,
               "extractLicenses": false,
