--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jest": "^29.7.0",
     "jest-preset-angular": "^13.1.4",
     "lint-staged": "latest",
+    "prettier": "3.2.2",
     "typescript": "~5.2.2"
   },
   "jest": {
