--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test:watch": "jest --watch",
     "test:ci": "jest --runInBand",
     "lint": "ng lint",
-    "postinstall": "husky install"
+    "postinstall": "husky install",
+    "commitlint": "commitlint --edit"
   },
   "private": true,
   "dependencies": {
@@ -36,6 +37,8 @@
     "@angular/cli": "^17.0.0",
     "@angular/compiler-cli": "^17.0.0",
     "@antfu/eslint-config": "^1.2.1",
+    "@commitlint/cli": "^18.5.0",
+    "@commitlint/config-conventional": "^18.5.0",
     "@eslint/eslintrc": "^2.1.3",
     "@stylistic/eslint-plugin": "^1.4.x",
     "@typescript-eslint/eslint-plugin": "6.11.0",
