--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,37 +1,37 @@
 {
-  "editor.formatOnSave": true,
-  "editor.linkedEditing": true,
-  "workbench.iconTheme": "material-icon-theme",
-  "[javascript]": {
-    "editor.codeActionsOnSave": {
-      "source.fixAll.eslint": "explicit",
-      "source.fixAll.@stylistic": "explicit"
-    },
-    "editor.formatOnSave": false
-  },
-  "[typescript]": {
-    "editor.codeActionsOnSave": {
-      "source.fixAll.eslint": "explicit",
-      "source.fixAll.@stylistic": "explicit"
-    },
-    "editor.formatOnSave": false
-  },
-  "vim.digraphs": {},
-  "[html]": {
-    "editor.codeActionsOnSave": {
-      "source.fixAll.eslint": "explicit"
-    },
-    "editor.formatOnSave": true,
-    "editor.defaultFormatter": "vscode.html-language-features"
-  },
-  "editor.tabSize": 2,
-  "security.allowedUNCHosts": [
+	"editor.formatOnSave": true,
+	"editor.linkedEditing": true,
+	"workbench.iconTheme": "material-icon-theme",
+	"[javascript]": {
+		"editor.codeActionsOnSave": {
+			"source.fixAll.eslint": "explicit",
+			"source.fixAll.@stylistic": "explicit"
+		},
+		"editor.formatOnSave": false
+	},
+	"[typescript]": {
+		"editor.codeActionsOnSave": {
+			"source.fixAll.eslint": "explicit",
+			"source.fixAll.@stylistic": "explicit"
+		},
+		"editor.formatOnSave": false
+	},
+	"vim.digraphs": {},
+	"[html]": {
+		"editor.codeActionsOnSave": {
+			"source.fixAll.eslint": "explicit"
+		},
+		"editor.formatOnSave": true,
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
+	"editor.tabSize": 2,
+	"security.allowedUNCHosts": [
     "wsl.localhost"
   ],
-  "[javascript][typescript]": {
-    "editor.codeActionsOnSave": {
-      "source.fixAll.eslint": "explicit",
-      "source.fixAll.@stylistic": "explicit"
-    }
-  }
+	"[javascript][typescript]": {
+		"editor.codeActionsOnSave": {
+			"source.fixAll.eslint": "explicit",
+			"source.fixAll.@stylistic": "explicit"
+		}
+	}
 }
