--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:ci": "jest --runInBand",
-    "lint": "ng lint",
+    "lint": "npm run format && ng lint",
+    "format": "./node_modules/.bin/prettier . --check",
     "postinstall": "husky install"
   },
   "private": true,
