--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.0.0",
-    "@angular-eslint/builder": "17.1.0",
-    "@angular-eslint/eslint-plugin": "17.1.0",
-    "@angular-eslint/eslint-plugin-template": "17.1.0",
-    "@angular-eslint/schematics": "17.1.0",
-    "@angular-eslint/template-parser": "17.1.0",
+    "@angular-eslint/builder": "^17.1.0",
+    "@angular-eslint/eslint-plugin": "^17.1.0",
+    "@angular-eslint/eslint-plugin-template": "^17.1.0",
+    "@angular-eslint/schematics": "^17.1.0",
+    "@angular-eslint/template-parser": "^17.1.0",
     "@angular/cli": "^17.0.0",
     "@angular/compiler-cli": "^17.0.0",
     "@antfu/eslint-config": "^1.2.1",
@@ -46,7 +46,7 @@
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "jest-preset-angular": "^13.1.4",
-    "lint-staged": "latest",
+    "lint-staged": "^15.2.5",
     "prettier": "3.2.2",
     "typescript": "~5.2.2"
   },
