--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@angular/compiler-cli": "^17.0.0",
     "@antfu/eslint-config": "^1.2.1",
     "@eslint/eslintrc": "^2.1.3",
-    "@stylistic/eslint-plugin": "^1.4.x",
+    "@stylistic/eslint-plugin": "^2.1.0",
     "@typescript-eslint/eslint-plugin": "6.11.0",
     "@typescript-eslint/parser": "6.11.0",
     "angular-cli-ghpages": "^0.6.2",
